--- a/public/src/app/book/book.component.html
+++ b/public/src/app/book/book.component.html
@@ -1,170 +1,9 @@
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <style>
-    .payment-form {
-      padding-bottom: 50px;
-      font-family: 'Montserrat', sans-serif;
-    }
 
-    .payment-form.dark {
-      background-color: #f6f6f6;
-    }
-    .trigger {
-            font-size: 13px;
-            background-color: red;
-            color: white;
-            display: inline-block;
-            text-align: top; 
-            margin-left: 31px;
-            
-            
-        }
-
-    .payment-form .content {
-      box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
-      background-color: white;
-    }
-
-    .payment-form .block-heading {
-      padding-top: 50px;
-      margin-bottom: 40px;
-      text-align: center;
-    }
-
-    .payment-form .block-heading p {
-      text-align: center;
-      max-width: 420px;
-      margin: auto;
-      opacity: 0.7;
-    }
-
-    .payment-form.dark .block-heading p {
-      opacity: 0.8;
-    }
-
-    .payment-form .block-heading h1,
-    .payment-form .block-heading h2,
-    .payment-form .block-heading h3 {
-      margin-bottom: 1.2rem;
-      color: #3b99e0;
-    }
-
-    .payment-form form {
-      border-top: 2px solid #5ea4f3;
-      box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
-      background-color: #ffffff;
-      padding: 0;
-      max-width: 600px;
-      margin: auto;
-    }
-
-    .payment-form .title {
-      font-size: 1em;
-      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-      margin-bottom: 0.8em;
-      font-weight: 600;
-      padding-bottom: 8px;
-    }
-
-    .payment-form .products {
-      background-color: #f7fbff;
-      padding: 25px;
-    }
-
-    .payment-form .products .item {
-      margin-bottom: 1em;
-    }
-
-    .payment-form .products .item-name {
-      font-weight: 600;
-      font-size: 0.9em;
-    }
-
-    .payment-form .products .item-description {
-      font-size: 0.8em;
-      opacity: 0.6;
-    }
-
-    .payment-form .products .item p {
-      margin-bottom: 0.2em;
-    }
-
-    .payment-form .products .price {
-      float: right;
-      font-weight: 600;
-      font-size: 0.9em;
-    }
-
-    .payment-form .products .total {
-      border-top: 1px solid rgba(0, 0, 0, 0.1);
-      margin-top: 10px;
-      padding-top: 19px;
-      font-weight: 600;
-      line-height: 1;
-    }
-
-    .payment-form .card-details {
-      padding: 25px 25px 15px;
-    }
-
-    .payment-form .card-details label {
-      font-size: 12px;
-      font-weight: 600;
-      margin-bottom: 15px;
-      color: #79818a;
-      text-transform: uppercase;
-    }
-
-    .payment-form .card-details button {
-      margin-top: 0.6em;
-      padding: 12px 0;
-      font-weight: 600;
-    }
-    .confirm {
-      background-color: red;
-      
-    }
-
-    .payment-form .date-separator {
-      margin-left: 10px;
-      margin-right: 10px;
-      margin-top: 5px;
-    }
-
-    @media (min-width: 576px) {
-      .payment-form .title {
-        font-size: 1.2em;
-      }
-
-      .payment-form .products {
-        padding: 40px;
-      }
-
-      .payment-form .products .item-name {
-        font-size: 1em;
-      }
-
-      .payment-form .products .price {
-        font-size: 1em;
-      }
-
-      .payment-form .card-details {
-        padding: 40px 40px 30px;
-      }
-
-      .payment-form .card-details button {
-        margin-top: 2em;
-      }
-    }
-  </style>
-</head>
 
 <body>
+  <!-- navbar -->
+
   <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
     <h5 class="my-0 mr-md-auto font-weight-normal" style="width: 1000px; font-family: 'Pacifico', cursive; text-align: center;"> The Pro
       Ping Pong Connection</h5>
@@ -177,6 +16,10 @@
     </nav>
     <a class="btn btn-outline-primary" href="/">Sign up</a>
   </div>
+
+   <!-- end navbar -->
+
+
   <main class="page payment-page">
     <section class="payment-form dark">
       <div class="container">
@@ -185,8 +28,8 @@
           <p>Please book your upcoming lesson and/or event. Choose your location, preferred time and date. Please make
             sure to include any special requests for your event and we will do our best to accomodate.</p>
         </div>
+        <!-- confirmation window that is avaiable if client makes booking -->
         <div class ="confirm" *ngIf="lesson">
-          <!-- <div class="products"> -->
             <div>
             <h1 class="title">Congrats</h1>
             <h4 class="price">Here's the info on your Booking. We will be in touch shortly with confirmation and to
@@ -197,10 +40,8 @@
             <h6>{{lesson.request}}</h6>
             <h1>Total fees</h1>
             <h6>${{lesson.hours * 90}}</h6>
-
-
-
           </div>
+
         </div>
         <div *ngIf="booking">
           <div class="products">
@@ -214,10 +55,11 @@
             <h1>Total fees</h1>
             <h6>${{booking.hours * 150}}</h6>
 
-
-
           </div>
         </div>
+        <!--end of confirm div-->
+
+        <!--booking form-->
         
           <div class="products">
             <h3 class="title">Checkout</h3>
@@ -492,4 +334,3 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 
-</html>
