--- a/public/src/app/loginreg/loginreg.component.html
+++ b/public/src/app/loginreg/loginreg.component.html
@@ -1,111 +1,4 @@
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
-
-    <title>Document</title>
-    <style>
-        .register {
-          
-            border: solid black;
-            width: 400px;
-            height: 530px;
-            background-size: 390px 420px;        
-            background-image: 
-            linear-gradient(rgba(0, 0, 0, 0.5),
-             rgba(0, 0, 0, 0.5)), 
-            url("assets/checkerwoodbg.jpg");
-            margin: 0 auto;
-            margin-top: 28px;
-            margin-bottom: 10px;
-
-
-        } 
-        .headers {
-            text-align: center;
-            text-decoration-line: underline;
-            color: white;
-            font-family: 'Ubuntu Condensed', sans-serif;
-        }
-
-        .login {
-            
-            vertical-align: top;
-            border: solid black;
-            width: 400px;
-            height: 300px;
-           
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5),
-                    rgba(0, 0, 0, 0.5)), url("assets/checkerwoodbg.jpg");
-            background-size: 390px 420px;
-            margin: 0 auto;
-
-
-
-        }
-        .not {
-            font-size: 13px;
-            background-color: white;
-            color: red;
-            display: inline-block;
-            text-align: top; 
-            margin-left: 31px;
-            
-            
-        }
-        .trigger {
-            font-size: 13px;
-            background-color: red;
-            color: white;
-            display: inline-block;
-            text-align: top; 
-            margin-left: 31px;
-            
-            
-        }
-
-        .fields {
-            margin-left: 10px;
-            font-weight: bold;
-            margin: 10px;
-        }
-
-        input {
-            margin-left: 5px;
-        }
-
-        body {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5),
-                    rgba(0, 0, 0, 0.5)), url("assets/woodtt.jpg");
-
-
-
-        }
-
-        h2 {
-            text-align: center;
-            background-color: white;
-            width: 350px;
-            margin-left: 20px;
-            font-family: Verdana;
-            margin-top: 7px;
-
-        }
-
-        .button {
-            background-color: #3C4C5B;
-            align-content: center;
-            margin-left: 282px;
-            width: 100px;
-            color: white;
-
-        }
-    </style>
-</head>
 
 <body>
     <div class="wrapper">
@@ -123,7 +16,7 @@
                     <div class="form-group col-md-6">
                         <h4 class ="headers">Register</h4>
 
-
+                        <!-- registration form with validation messages-->
                         <p class ="fields"><input type="text" name="first" placeholder="first name" [(ngModel)]="newUser.first"
                                 required minlength="2" #first="ngModel" />
                         </p>
@@ -226,6 +119,15 @@
                 </form>
             </div>
         </div>
+
+
+        <!--end registration form and validations-->
+
+
+
+
+
+        <!--login form and validation messages-->
         <div class="login">
             <div class="form-row">
                 <form (submit)="login()">
@@ -256,7 +158,5 @@
                                 </p>
                             </div>
 
-    <!-- </div> 
-    
-</body> -->
+
 
